// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article tests matches snapshot with article 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="post"
        href="/"
      >
        <div
          class="header"
        >
          Title
        </div>
        <div
          class="imageWrapper"
        >
          <img
            alt="Title"
            class="image"
            src="imageUrl"
          />
        </div>
        <div
          class="summary"
        >
          long text
        </div>
        <div
          class="bottom"
        >
          <div
            class="source"
          >
            some news
          </div>
          <div
            class="date"
          >
            Mon Nov 23 2020
          </div>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="post"
      href="/"
    >
      <div
        class="header"
      >
        Title
      </div>
      <div
        class="imageWrapper"
      >
        <img
          alt="Title"
          class="image"
          src="imageUrl"
        />
      </div>
      <div
        class="summary"
      >
        long text
      </div>
      <div
        class="bottom"
      >
        <div
          class="source"
        >
          some news
        </div>
        <div
          class="date"
        >
          Mon Nov 23 2020
        </div>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`article tests matches snapshot with no article 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="post-empty"
      >
        <div
          class="header"
        >
          HEADER OF THE TITLE
        </div>
        <div
          class="image"
        >
          IMAGE WILL GO HERE
        </div>
        <div
          class="summary"
        >
          SUMMARY
        </div>
        <div
          class="bottom"
        >
          <div
            class="source"
          >
            SOURCE
          </div>
          <div
            class="date"
          >
            DATE
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="post-empty"
    >
      <div
        class="header"
      >
        HEADER OF THE TITLE
      </div>
      <div
        class="image"
      >
        IMAGE WILL GO HERE
      </div>
      <div
        class="summary"
      >
        SUMMARY
      </div>
      <div
        class="bottom"
      >
        <div
          class="source"
        >
          SOURCE
        </div>
        <div
          class="date"
        >
          DATE
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
